Fix index page layout issue

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -22,19 +22,16 @@
 
     @media screen and (min-width: $lg) {
 		flex-direction: row;
-		justify-content: space-between;
-		padding: 32px 16px 16px 16px;		
+		justify-content: space-between;	
 
 		.post-content,
 		.index-content {
-			max-width: 65%;
-			flex: 0 0 65%;
+			flex: 1 0 65%;
 		}
 
 		.widget-area {
-			max-width: 30%;
 			margin-top: 76px;
-			padding: 0 16px;
+			margin-left: 32px;
 		}
     }	
 }
